--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
