--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.23.6",
-    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-lazyload": "^3.2.1",
-    "react-leaflet": "^4.2.1",
     "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
