--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^7.8.2",
     "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
