--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.2",
     "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
