--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -22,6 +23,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^2.0.5",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
     "workbox-webpack-plugin": "^7.3.0"
