--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-spring/web": "^10.0.3",
     "@supabase/supabase-js": "^2.57.0",
     "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
