--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "quill": "^2.0.3",
+    "rc-slider": "^11.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
